working bug fixes

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGO_URL='mongodb+srv://user1:<user123>@cluster0.lu3bylt.mongodb.net/?retryWrites=true&w=majority'
+MONGO_URL='mongodb+srv://user1:user123@cluster0.lu3bylt.mongodb.net/?retryWrites=true&w=majority'
 JWT_SECRET='somesuperhardstringtoguess'
 PORT=3001
